--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "proto:install": "npm i git+https://github.com/talalanwarwarraich/grpc_nest_proto.git",
+    "proto:install": "npm i ../grpc_nest_proto",
     "proto:auth": "protoc --plugin=node_modules/.bin/protoc-gen-ts_proto -I=./node_modules/grpc_nest_proto/proto --ts_proto_out=src/auth node_modules/grpc_nest_proto/proto/auth.proto --ts_proto_opt=nestJs=true --ts_proto_opt=fileSuffix=.pb",
     "proto:order": "protoc --plugin=node_modules/.bin/protoc-gen-ts_proto -I=./node_modules/grpc_nest_proto/proto --ts_proto_out=src/order node_modules/grpc_nest_proto/proto/order.proto --ts_proto_opt=nestJs=true --ts_proto_opt=fileSuffix=.pb",
     "proto:product": "protoc --plugin=node_modules/.bin/protoc-gen-ts_proto -I=./node_modules/grpc_nest_proto/proto --ts_proto_out=src/product node_modules/grpc_nest_proto/proto/product.proto --ts_proto_opt=nestJs=true --ts_proto_opt=fileSuffix=.pb",
@@ -31,6 +31,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/microservices": "^10.1.3",
     "@nestjs/platform-express": "^10.0.0",
+    "grpc_nest_proto": "file:../grpc_nest_proto",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
